test: 목록을 갖고 오는 것과 unreadCt 검사를 분리 후 테스트